@@ -62,7 +62,7 @@ TEST_F(MSWindowsClipboardTests, empty_openCalled_returnsTrue) {
 TEST_F(MSWindowsClipboardTests, empty_singleFormat_hasReturnsFalse) {
   MSWindowsClipboard clipboard(NULL);
   clipboard.open(0);
-  clipboard.add(MSWindowsClipboard::kText, "deskflow rocks!");
+  clipboard.add(MSWindowsClipboard::kText, "synergy rocks!");
 
   clipboard.empty();
 
@@ -74,10 +74,10 @@ TEST_F(MSWindowsClipboardTests, add_newValue_valueWasStored) {
   MSWindowsClipboard clipboard(NULL);
   clipboard.open(0);
 
-  clipboard.add(IClipboard::kText, "deskflow rocks!");
+  clipboard.add(IClipboard::kText, "synergy rocks!");
 
   String actual = clipboard.get(IClipboard::kText);
-  EXPECT_EQ("deskflow rocks!", actual);
+  EXPECT_EQ("synergy rocks!", actual);
 }
 
 TEST_F(MSWindowsClipboardTests, add_newValue_writeWasCalled) {
@@ -88,14 +88,14 @@ TEST_F(MSWindowsClipboardTests, add_newValue_writeWasCalled) {
   clipboard.setFacade(facade);
   clipboard.open(0);
 
-  clipboard.add(IClipboard::kText, "deskflow rocks!");
+  clipboard.add(IClipboard::kText, "synergy rocks!");
 }
 
 TEST_F(MSWindowsClipboardTests, add_replaceValue_valueWasReplaced) {
   MSWindowsClipboard clipboard(NULL);
   clipboard.open(0);
 
-  clipboard.add(IClipboard::kText, "deskflow rocks!");
+  clipboard.add(IClipboard::kText, "synergy rocks!");
   clipboard.add(IClipboard::kText, "maxivista sucks"); // haha, just kidding.
 
   String actual = clipboard.get(IClipboard::kText);
@@ -157,7 +157,7 @@ TEST_F(MSWindowsClipboardTests, has_withFormatAdded_returnsTrue) {
   MSWindowsClipboard clipboard(NULL);
   clipboard.open(0);
   clipboard.empty();
-  clipboard.add(IClipboard::kText, "deskflow rocks!");
+  clipboard.add(IClipboard::kText, "synergy rocks!");
 
   bool actual = clipboard.has(IClipboard::kText);
 
@@ -188,11 +188,11 @@ TEST_F(MSWindowsClipboardTests, get_withFormatAdded_returnsExpected) {
   MSWindowsClipboard clipboard(NULL);
   clipboard.open(0);
   clipboard.empty();
-  clipboard.add(IClipboard::kText, "deskflow rocks!");
+  clipboard.add(IClipboard::kText, "synergy rocks!");
 
   String actual = clipboard.get(IClipboard::kText);
 
-  EXPECT_EQ("deskflow rocks!", actual);
+  EXPECT_EQ("synergy rocks!", actual);
 }
 
 TEST_F(MSWindowsClipboardTests, isOwnedByDeskflow_defaultState_noError) {
